整理说明文档

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ var documentWidth = Math.min(document.documentElement.clientHeight,document.docu
 			myDial.stop(data);
 		});
 	})
+	console.log(myDial);
 </script>
 </body>
 </html>
