--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ var documentWidth = Math.min(document.documentElement.clientHeight,document.docu
       </form></div>
 </div>
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-<script src="dial.js"></script> 
+<script src="dial.min.js"></script> 
 <script>
 var	myDial = dial({canvasId:"dial",
 				duration: 500,
